add_library(
    oneRjSumCj_engine
    oneRjSumCj_engine.h
    oneRjSumCj_engine.cpp
)

add_library(
    oneRjSumCjBranch
    oneRjSumCjBranch.h
    oneRjSumCjBranch.cpp
)

add_library(
    oneRjSumCjGraph
    oneRjSumCjGraph.h
    oneRjSumCjGraph.cpp
)

add_library(
    oneRjSumCjNode
    oneRjSumCjNode.h
    oneRjSumCjNode.cpp
)

add_library(
    oneRjSumCjPrune
    oneRjSumCjPrune.h
    oneRjSumCjPrune.cpp
)

add_library(
    oneRjSumCjSearch
    oneRjSumCjSearch.h
    oneRjSumCjSearch.cpp
)
